Skip VersionSupportMatrix overhead when unused